<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>khi_moveit</name>
  <version>1.0.0</version>
  <description>Package with launch files and run-time configurations for  `ros2_control` examples.</description>
  <maintainer email="kurita_taisuke@global.kawasaki.com">Kurita Taisuke</maintainer>
  <author email="kurita_taisuke@global.kawasaki.com">Kurita Taisuke</author>
  <license>Apache License 2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <build_depend>khi_msgs</build_depend>

  <exec_depend>controller_manager</exec_depend>
  <exec_depend>khi_description</exec_depend>
  <exec_depend>moveit</exec_depend>
  <exec_depend>rviz2</exec_depend>
  <exec_depend>urdf</exec_depend>
  <exec_depend>xacro</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
