<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>khi_msgs</name>
  <version>1.0.0</version>
  <description>This package contains KHI ROS2 robot messages and services</description>
  <maintainer email="kurita_taisuke@global.kawasaki.com">Kurita Taisuke</maintainer>
  <author email="kurita_taisuke@global.kawasaki.com">Kurita Taisuke</author>
  <license>Apache License 2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <build_depend>rosidl_default_generators</build_depend>

  <exec_depend>rosidl_default_runtime</exec_depend>

  <member_of_group>rosidl_interface_packages</member_of_group>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
